<resources>
    <string name="app_name">OneAlbumPlayer</string>
    <string name="button">Button</string>
    <string name="album">ALBUM</string>
    <string name="album_title">Album Title</string>
    <string name="artist">Artist:</string>
    <string name="artist_name">Artist Name</string>
    <string name="album_subtitle">Album subtitle</string>
    <string name="release_date">release date</string>
    <string name="genre">Genre</string>
</resources>
